<resources>
    <string name="app_name" translatable="false">Nihongo Mochi</string>
    <string name="game_services_project_id" translatable="false">4820908234178660180</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Nihongo Mochi</string>
    <string name="nav_header_subtitle">Apprenez le japonais</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_achievements">Succès</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Paramètres</string>
    <string name="lorem_ipsum_title">Lorem Ipsum</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book.
    </string>
    <string name="fab_content_description">Représente une vue pour invoquer une action</string>
    <string name="image_view_item_transform_content_description">Représente une vue d\'image dans l\'élément
    </string>
    <string name="settings_title">Options</string>
    <string name="settings_category_general">Général</string>
    <string name="settings_category_learning">Apprentissage</string>
    <string name="settings_category_interface">Interface</string>
    <string name="settings_language">Langue</string>
    <string name="settings_pronunciation">Prononciation</string>
    <string name="settings_pronunciation_roman">Alphabet romain</string>
    <string name="settings_pronunciation_hiragana">Japonais Hiragana</string>
    <string name="settings_default_user_list">Liste d\'utilisateurs par défaut</string>
    <string name="settings_add_wrong_answers">Ajoute automatiquement les mauvaises réponses</string>
    <string name="settings_remove_good_answers">Enlève automatiquement les mots 10/10</string>
    <string name="settings_text_size">Taille du texte</string>
    <string name="settings_animation_speed">Vitesse d\'animation</string>
    <string name="settings_theme">Thème (Clair/Sombre)</string>
    <string name="settings_reset_tutorial">Réinitialiser le tutoriel</string>
    <string name="settings_send_bug_report">Envoyer un rapport de bug</string>
    <string name="section_fundamentals">Fondamentaux</string>
    <string name="section_jlpt">JLPT</string>
    <string name="section_school">École Japonaise</string>
    <string name="section_challenges">Challenges</string>
    <string name="game_recap_title">Jeu de reconnaissance</string>
    <string name="game_recap_meaning">Sens</string>
    <string name="game_recap_reading">Lecture</string>
    <string name="game_recap_common_pronunciations">Prononciations courantes</string>
    <string name="game_recap_random_pronunciations">Prononciations aléatoires</string>
    <string name="game_recap_play">Jouer</string>
    <string name="game_writing_label_meaning">Signification</string>
    <string name="game_writing_label_reading">Lecture</string>
    <string name="enter_your_answer">Entrez votre réponse</string>
    <string name="submit">Envoyer</string>
    <string name="game_writing_correction">Correction</string>
    <string name="game_writing_on">ON</string>
    <string name="game_writing_kun">KUN</string>
    <string name="recognition_title">見覚え</string>
    <string name="recognition_subtitle">Choisis un groupe de kanji et apprends à reconnaître leurs différentes significations de base</string>
    <string name="recognition_fundamentals">Fondamentaux</string>
    <string name="recognition_jlpt">Japanese Language Proficiency Test</string>
    <string name="recognition_primary_school">Ecole primaire (Jōyō 1..1006)</string>
    <string name="recognition_high_school">Lycée (Jōyō 1007..2136)</string>
    <string name="challenge_native">Native Challenge</string>
    <string name="challenge_no_reading">No Reading</string>
    <string name="challenge_no_meaning">No Meaning</string>
    <string name="writing_title">書き方</string>
    <string name="writing_game_recap_title">Jeu d\'écriture</string>
    <string name="writing_subtitle">Choisis un groupe de mots et apprends à les écrire.</string>
    <string name="writing_kanji_tree">Kanji Tree</string>
    <string name="writing_kanji_tree_subtitle">Si vous n’avez pas encore appris quelque chose :\n(10/10 dans le jeu concerné)</string>
    <string name="writing_kanji_tree_ignore">Ignorer</string>
    <string name="writing_kanji_tree_include">les inclure quand même</string>
    <string name="writing_find_words">Trouver des mots</string>
    <string name="writing_most_used_words">Mots les plus utilisés</string>
    <string name="writing_find_kanji">Trouver un Kanji</string>
    <string name="writing_lists">Listes</string>
    <string name="writing_user_lists">Liste de l\'utilisateurs / listes d\'étude</string>
    <string name="reading_title">読み方</string>
    <string name="reading_subtitle">Choisis un groupe de mots et apprends leurs prononciations.</string>
    <string name="reading_kanji_tree_subtitle">Si le mot contient des kanji que tu n\'as pas encore appris :\n(10/10 au jeu de reconnaissance)</string>
    <string name="reading_user_list">Liste de l\'utilisateur</string>
    <string name="reading_modify_button">Modifier</string>
    <string name="reading_kanji_solo">Kanji seul</string>
    <string name="reading_simple_words">Mots simples</string>
    <string name="reading_compound_words">Mots composés</string>
    <string name="reading_ignore_known_words">Ignorer les mots parfaitement connus</string>
    <string name="menu_recognition">Reconnaître</string>
    <string name="menu_reading">Lire</string>
    <string name="menu_writing">Écrire</string>
    <string name="menu_dictionary">Dictionnaire</string>
    <string name="menu_results">Résultats</string>
    <string name="menu_about">À propos</string>
    <string name="level_n5">JLPT N5</string>
    <string name="level_n4">JLPT N4</string>
    <string name="level_n3">JLPT N3</string>
    <string name="level_n2">JLPT N2</string>
    <string name="level_n1">JLPT N1</string>
    <string name="level_grade_1">Grade 1</string>
    <string name="level_grade_2">Grade 2</string>
    <string name="level_grade_3">Grade 3</string>
    <string name="level_grade_4">Grade 4</string>
    <string name="level_grade_5">Grade 5</string>
    <string name="level_grade_6">Grade 6</string>
    <string name="level_grade_7">Collège 1</string>
    <string name="level_grade_8">Collège 2</string>
    <string name="level_grade_9">Lycée 1</string>
    <string name="level_grade_10">Lycée 2</string>
    <string name="level_native_challenge">Native Challenge</string>
    <string name="level_no_reading">No Reading</string>
    <string name="level_no_meaning">No Meaning</string>
    <string name="level_college_1">Collège 1</string>
    <string name="level_college_2">Collège 2</string>
    <string name="level_lycee_1">Lycée 1</string>
    <string name="level_lycee_2">Lycée 2</string>
    <string name="level_class_1">Classe 1</string>
    <string name="level_class_2">Classe 2</string>
    <string name="level_class_3">Classe 3</string>
    <string name="level_class_4">Classe 4</string>
    <string name="level_class_5">Classe 5</string>
    <string name="level_class_6">Classe 6</string>
    <string name="level_high_school_1">Test 4</string>
    <string name="level_high_school_2">Test 3</string>
    <string name="level_high_school_3">Test Pre-2</string>
    <string name="level_high_school_4">Test 2</string>
    <string name="level_hiragana">Hiragana</string>
    <string name="level_katakana">Katakana</string>
    <string name="home_recognition_subtitle">Apprendre à reconnaître les kanji et à se rappeler leurs significations de base.</string>
    <string name="home_reading_subtitle">Apprenez à lire des mots en entier et comment les prononcer dans différents contextes</string>
    <string name="home_writing_subtitle">Entraînez-vous à écrire des mots et à graver le kanji dans votre mémoire.</string>
    <string name="title_home">Nihongo Mochi</string>
    <string name="title_game_recap">Récapitulatif du jeu</string>
    <string name="title_writing_recap">Jeu d\'écriture</string>
    <string name="about_category_informations">Informations</string>
    <string name="about_category_credits">Crédits</string>
    <string name="about_category_resources">Ressources</string>
    <string name="about_design_dev">Design &amp; Développement</string>
    <string name="about_pedagogical">Contenu Pédagogique</string>
    <string name="about_coming_soon">(À venir)</string>
    <string name="about_retribution">Rétribution</string>
    <string name="about_patreon">Soutenez-moi sur Patreon</string>
    <string name="about_tipeee">Faire un don sur Tipeee</string>
    <string name="my_image_description">Bouton page suivante</string>
    <string name="about_version_info">Information de la version</string>
    <string name="about_version_label">Version :</string>
    <string name="about_date_label">Date :</string>
    <string name="about_issue_tracker">Rapports de bug ou demandes</string>
    <string name="about_credits">Crédits</string>
    <string name="about_author_name" translatable="false">LECOQ Vincent</string>
    <string name="about_author_role">Design, programming, etc.</string>
    <string name="about_pedagogical_content">Contenu pédagogique japonais</string>
    <string name="about_kanji_data_credit">Données Kanji: David Gouveia</string>
    <string name="about_header_picture_credit">Photo: Charles Knowles</string>
    <string name="about_rate_app">Noter l\'application</string>
    <string name="results_title">Résultats</string>
    <string name="results_recognition_title">Reconnaissance</string>
    <string name="results_section_kanas">Kanas (Hiragana / Katakana)</string>
    <string name="results_section_jlpt">JLPT (N5 - N1)</string>
    <string name="results_section_school">Scolaire (Grades / Lycée)</string>
    <string name="results_section_frequency">Fréquence</string>
    <string name="results_frequency_x_words">%1$d mots les plus fréquents</string>
    <string name="results_hiragana">Hiraganas - %1$d%%</string>
    <string name="results_katakana">Katakanas - %1$d%%</string>
    <string name="results_jlpt_n5">JLPT N5 - %1$d%%</string>
    <string name="results_jlpt_n4">JLPT N4 - %1$d%%</string>
    <string name="results_jlpt_n3">JLPT N3 - %1$d%%</string>
    <string name="results_jlpt_n2">JLPT N2 - %1$d%%</string>
    <string name="results_jlpt_n1">JLPT N1 - %1$d%%</string>
    <string name="results_grade_1">Grade 1 - %1$d%%</string>
    <string name="results_grade_2">Grade 2 - %1$d%%</string>
    <string name="results_grade_3">Grade 3 - %1$d%%</string>
    <string name="results_grade_4">Grade 4 - %1$d%%</string>
    <string name="results_grade_5">Grade 5 - %1$d%%</string>
    <string name="results_grade_6">Grade 6 - %1$d%%</string>
    <string name="results_college">Collège - %1$d%%</string>
    <string name="results_high_school">Lycée - %1$d%%</string>
    <string name="results_reading_title">Lecture</string>
    <string name="results_total_count">Total: %1$d</string>
    <string name="results_most_frequent_words">%1$d mots les plus fréquents - %2$d%%</string>
    <string name="results_writing_title">Écriture</string>
    <string name="results_backup">Backup</string>
    <string name="results_restore">Restore</string>
    <string name="results_sync">Sync</string>
    <string name="mode_revise">Réviser</string>
    <string name="options">Options</string>
</resources>