<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.oktail.kanjimori.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_recognition"
            app:destination="@id/nav_recognition" />
        <action
            android:id="@+id/action_nav_home_to_nav_reading"
            app:destination="@id/nav_reading" />
        <action
            android:id="@+id/action_nav_home_to_nav_writing"
            app:destination="@id/nav_writing" />
        <action
            android:id="@+id/action_nav_home_to_nav_dictionary"
            app:destination="@id/nav_dictionary" />
        <action
            android:id="@+id/action_nav_home_to_nav_options"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_home_to_nav_results"
            app:destination="@id/nav_results" />
        <action
            android:id="@+id/action_nav_home_to_nav_about"
            app:destination="@id/nav_about" />
    </fragment>

    <fragment
        android:id="@+id/nav_recognition"
        android:name="org.oktail.kanjimori.ui.recognition.RecognitionFragment"
        android:label="@string/menu_recognition"
        tools:layout="@layout/fragment_recognition">
        <action
            android:id="@+id/action_nav_recognition_to_game_recap"
            app:destination="@id/nav_game_recap" />
        <action
            android:id="@+id/action_nav_recognition_to_nav_hiragana"
            app:destination="@id/nav_hiragana" />
        <action
            android:id="@+id/action_nav_recognition_to_nav_katakana"
            app:destination="@id/nav_katakana" />
    </fragment>

    <fragment
        android:id="@+id/nav_hiragana"
        android:name="org.oktail.kanjimori.ui.gojuon.HiraganaFragment"
        android:label="@string/level_hiragana"
        tools:layout="@layout/fragment_hiragana">
        <action
            android:id="@+id/action_nav_hiragana_to_hiragana_quiz"
            app:destination="@id/hiragana_quiz_fragment" />
    </fragment>

    <fragment
        android:id="@+id/hiragana_quiz_fragment"
        android:name="org.oktail.kanjimori.ui.gojuon.HiraganaQuizFragment"
        android:label="Hiragana Quiz"
        tools:layout="@layout/fragment_hiragana_quiz" />

    <fragment
        android:id="@+id/nav_katakana"
        android:name="org.oktail.kanjimori.ui.gojuon.KatakanaFragment"
        android:label="@string/level_katakana"
        tools:layout="@layout/fragment_katakana">
        <action
            android:id="@+id/action_nav_katakana_to_katakana_quiz"
            app:destination="@id/katakana_quiz_fragment" />
    </fragment>

    <fragment
        android:id="@+id/katakana_quiz_fragment"
        android:name="org.oktail.kanjimori.ui.gojuon.KatakanaQuizFragment"
        android:label="Katakana Quiz"
        tools:layout="@layout/fragment_katakana_quiz" />

    <fragment
        android:id="@+id/nav_reading"
        android:name="org.oktail.kanjimori.ui.reading.ReadingFragment"
        android:label="@string/menu_reading"
        tools:layout="@layout/fragment_reading">
        <action
            android:id="@+id/action_nav_reading_to_word_list"
            app:destination="@id/nav_word_list" />
    </fragment>

    <fragment
        android:id="@+id/nav_writing"
        android:name="org.oktail.kanjimori.ui.writing.WritingFragment"
        android:label="@string/menu_writing"
        tools:layout="@layout/fragment_writing">
        <action
            android:id="@+id/action_nav_writing_to_writing_recap"
            app:destination="@id/nav_writing_recap" />
    </fragment>

    <fragment
        android:id="@+id/nav_dictionary"
        android:name="org.oktail.kanjimori.ui.dictionary.DictionaryFragment"
        android:label="@string/menu_dictionary"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="org.oktail.kanjimori.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_results"
        android:name="org.oktail.kanjimori.ui.results.ResultsFragment"
        android:label="@string/menu_results"
        tools:layout="@layout/fragment_results" />

    <fragment
        android:id="@+id/nav_about"
        android:name="org.oktail.kanjimori.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_game_recap"
        android:name="org.oktail.kanjimori.ui.gamerecap.GameRecapFragment"
        android:label="@string/title_game_recap"
        tools:layout="@layout/fragment_game_recap">
        <argument
            android:name="level"
            app:argType="string" />
        <action
            android:id="@+id/action_game_recap_to_recognition_game"
            app:destination="@id/nav_recognition_game" />
    </fragment>

    <fragment
        android:id="@+id/nav_writing_recap"
        android:name="org.oktail.kanjimori.ui.writingrecap.WritingRecapFragment"
        android:label="@string/title_game_recap"
        tools:layout="@layout/fragment_writing_recap">
        <argument
            android:name="level"
            app:argType="string" />
        <action
            android:id="@+id/action_writing_recap_to_writing_game"
            app:destination="@id/nav_writing_game" />
    </fragment>

    <fragment
        android:id="@+id/nav_recognition_game"
        android:name="org.oktail.kanjimori.ui.recognitiongame.RecognitionGameFragment"
        android:label="@string/game_recap_title"
        tools:layout="@layout/fragment_recognition_game">
        <argument
            android:name="level"
            app:argType="string"
            android:defaultValue="N5" />
        <argument
            android:name="gameMode"
            app:argType="string"
            android:defaultValue="meaning" />
        <argument
            android:name="readingMode"
            app:argType="string"
            android:defaultValue="common" />
        <argument
            android:name="customWordList"
            app:argType="string[]"
            app:nullable="true"
            android:defaultValue="@null"/>
    </fragment>

    <fragment
        android:id="@+id/nav_writing_game"
        android:name="org.oktail.kanjimori.ui.writinggame.WritingGameFragment"
        android:label="Writing Game"
        tools:layout="@layout/fragment_writing_game">
        <argument
            android:name="level"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_word_list"
        android:name="org.oktail.kanjimori.ui.wordlist.WordListFragment"
        android:label="Word List"
        tools:layout="@layout/fragment_word_list">
        <argument
            android:name="wordList"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_word_list_to_nav_word_quiz"
            app:destination="@id/nav_word_quiz" />
    </fragment>

    <fragment
        android:id="@+id/nav_word_quiz"
        android:name="org.oktail.kanjimori.ui.wordquiz.WordQuizFragment"
        android:label="Word Quiz"
        tools:layout="@layout/fragment_word_quiz">
        <argument
            android:name="wordList"
            app:argType="string" />
        <argument
            android:name="ignoreKnownWords"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

</navigation>